Change a lot of things (read more...)
- add $background-image variable to _custom-settings.scss to change
masthead/footer background in one place
- change mobile styling
- add favicon to static
- add index-masthead
- add scroll button to index-masthead
- navbar breakpoint is at bootstrap-xl
- add "navbar" context to view_section in views.py in order to support
.active style
- add congruent_outline, dark_embroidery, and spiration dark pngs to
test for a good background
- add index_scroll.js which is only added to index-masthead

--- a/home/static/home/styles/imports/_custom-settings.scss
+++ b/home/static/home/styles/imports/_custom-settings.scss
@@ -8,6 +8,9 @@ $background: #f4f4f4; //PAPER
 $base: #373737; //CHARCOAL
 $blair: #a52714;
 
+/* MASTHEAD/FOOTER BACKGROUND IMAGE */
+$background-image: url("../images/spiration dark.png");
+
 /* MIXINS */
 $breakpoints: (
     "phone":        576px,
