--- a/home/static/home/styles/imports/_site-footer-style.scss
+++ b/home/static/home/styles/imports/_site-footer-style.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: auto;
     margin-top: 4em;
-    background: url("../images/footer_lodyas.png");
+    background: $background-image;
     background-attachment: fixed;
     color: $background;
     .site-footer-expand {
