--- a/home/templates/home/includes/_site-navbar-wrapper.html
+++ b/home/templates/home/includes/_site-navbar-wrapper.html
@@ -1,5 +1,5 @@
 <div class="site-navbar-wrapper">
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-xl fixed-top">
         <a class="navbar-brand" href="{% url "home:index" %}">SilverChips</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarDropdown">
             <ul class="navbar-nav">
                 {% for section in section_roots %}
-                  <li class="nav-item">
+                  <li class="nav-item {% if navbar == section.name %} active {% endif %}">
                     <a class="nav-link" href="{% url "home:view_section" section.name %}">{{ section.title }}</a>
                   </li>
                 {% endfor %}
