change mastheads, navbar placement, and animations
- change index_scroll.js to index.scroll
- add TweenMax CDN to bootstrap.html
- change section html to include header (rethink this design choice
later)
- change navbar to be sticky on section urls
- remove doctype specifier in logo-svg.html for optimization
- change base layout (again, rethink this code structure)
- add absolute-top css class for index.html styling
- make scroll button disappear on mobile
- start logo-svg fill attribute as 'none' in css

--- a/home/static/home/styles/home.scss
+++ b/home/static/home/styles/home.scss
@@ -18,3 +18,4 @@ html {
 @import "imports/_site-navbar-style";
 @import "imports/_site-footer-style";
 @import "imports/_site-index-masthead-style";
+@import "imports/_section-header-style";
