--- a/home/static/home/styles/imports/_custom-settings.scss
+++ b/home/static/home/styles/imports/_custom-settings.scss
@@ -9,7 +9,7 @@ $base: #373737; //CHARCOAL
 $blair: #a52714;
 
 /* MASTHEAD/FOOTER BACKGROUND IMAGE */
-$background-image: url("../images/spiration dark.png");
+$background-image: url("../images/footer_lodyas.png");
 
 /* MIXINS */
 $breakpoints: (
