--- a/home/templates/home/includes/_site-index-masthead.html
+++ b/home/templates/home/includes/_site-index-masthead.html
@@ -11,5 +11,5 @@
     <div id="scroll">
         <a id="scroll-btn" href="#scroll"><i class="fas fa-chevron-down"></i>Scroll</a>
     </div>
-    <script src="{% static 'home/scripts/index_scroll.js' %}"></script>
+    <script defer src="{% static 'home/scripts/index.js' %}"></script>
 </div>
