--- a/home/static/home/styles/imports/_site-navbar-style.scss
+++ b/home/static/home/styles/imports/_site-navbar-style.scss
@@ -1,6 +1,6 @@
 .site-navbar-wrapper {
     .navbar {
-        transition: background-color 0.5s ease;
+        transition: background 0.5s ease;
         background: $background;
         padding-top: 1em;
         width: 100%;
@@ -12,6 +12,11 @@
                 color: $background;
             }
         };
+    }
+    .absolute-top {
+        position: absolute;
+        z-index: 1;
+        top: 0;
     }
     .navbar-brand {
             text-transform: uppercase;
