--- a/home/static/home/styles/imports/_site-navbar-wrapper-style.scss
+++ b/home/static/home/styles/imports/_site-navbar-wrapper-style.scss
@@ -1,11 +1,21 @@
 .site-navbar-wrapper {
-    .navbar {
-        transition: background 0.5s ease;
-        background: $background;
-        padding-top: 1em;
+    background: $base;
+    .navbar-header {
+        transition: height 1s ease-in;
         width: 100%;
+        .logo-container {
+            width: 90%;
+            @include mq("tablet") {width: 70%;};
+            @include mq("desktop") {width: 35%;};
+            padding-top: 2em;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+    .navbar {
+        width: 100%;
+        padding-top: 1em;
         @include mq("desktop-wide") {
-            background: rgba(55,55,55,0.85);
             .navbar-brand {color: $background;}
             .nav-item {.nav-link {color: $undertone-secondary;}}
             .active .nav-link {
