--- a/home/templates/home/includes/_site-navbar-wrapper.html
+++ b/home/templates/home/includes/_site-navbar-wrapper.html
@@ -1,4 +1,9 @@
 <div class="site-navbar-wrapper {% if section %}sticky-top{% endif %}">
+    <header class="navbar-header">
+        <div class="logo-container">
+            {% include "home/includes/_logo-svg.html" %}
+        </div>
+    </header>
     <nav class="navbar navbar-expand-xl">
         <a class="navbar-brand" href="{% url "home:index" %}">SilverChips</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
