--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,21 +3,48 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <div class="container">
-        {% for section in section_roots %}
-            <div class="card">
-                <div class="card-header">
-                    <a class="solid-link" href="{% url "home:view_section" section.name %}"><h4 class="card-title">{{ section.title }}</h4></a>
+    <div class="container index-featured">
+        <hr class="my-4">
+        <h1 class="display-2 text-center">Home</h1>
+        <hr class="my-4">
+        <div class="row">
+            {% for section in section_roots %}
+                <div class="card col-lg mx-1 my-3">
+                    <div class="card-header">
+                        <a class="" href="{% url "home:view_section" section.name %}"><h4 class="card-title">{{ section.title }}</h4></a>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            {% for story in section.all_stories.all|slice:":1" %}
+                                {% include "shared/story_summary.html" with story=story %}
+                            {% endfor %}
+                        </p>
+                    </div>
                 </div>
-                <ul class="list-group list-group-flush">
-                    {% for story in section.all_stories.all|slice:":3" %}
-                        <li class="list-group-item">
-                            {% include "shared/story_summary.html" with story=story %}
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <br>
-        {% endfor %}
+                <!-- if last column in row, make new row -->
+                {% if forloop.counter|divisibleby:"3" and not forloop.last %}
+                </div><div class="row">
+                {% endif %}
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
+{# {% block content %} #}
+    {# <div class="container"> #}
+        {# {% for section in section_roots %} #}
+            {# <div class="card"> #}
+                {# <div class="card-header"> #}
+                    {# <a class="solid-link" href="{% url "home:view_section" section.name %}"><h4 class="card-title">{{ section.title }}</h4></a> #}
+                {# </div> #}
+                {# <ul class="list-group list-group-flush"> #}
+                    {# {% for story in section.all_stories.all|slice:":3" %} #}
+                        {# <li class="list-group-item"> #}
+                            {# {% include "shared/story_summary.html" with story=story %} #}
+                        {# </li> #}
+                    {# {% endfor %} #}
+                {# </ul> #}
+            {# </div> #}
+            {# <br> #}
+        {# {% endfor %} #}
+    {# </div> #}
+{# {% endblock %} #}
