--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -12,12 +12,13 @@ $blair: #a52714;
 $background-image: url("../images/footer_lodyas.png");
 
 /* MIXINS */
-$breakpoints: (
-    "phone":        576px,
-    "tablet":       768px,
-    "desktop":      992px,
-    "desktop-wide": 1200px
+$breakpoints: (            //   Bootstrap equivalents
+    "phone":        576px, //           sm
+    "tablet":       768px, //           md
+    "desktop":      992px, //           lg
+    "desktop-wide": 1200px //           xl
 );
+
 @mixin mq($width, $type: min) {
     @if map_has_key($breakpoints, $width) {
         $width: map_get($breakpoints, $width);
