--- a/home/templates/home/includes/_site-navbar-wrapper.html
+++ b/home/templates/home/includes/_site-navbar-wrapper.html
@@ -1,19 +1,22 @@
-<div class="site-navbar-wrapper {% if section %}sticky-top{% endif %}">
-    <header class="navbar-header">
-        <div class="logo-container">
+<div class="navbar-wrapper sticky-top">
+    <header class="navbar-wrapper-header w-100">
+        <div class="logo mx-auto py-3">
             {% include "home/includes/_logo-svg.html" %}
         </div>
+        <h6 class="lead text-center d-none d-lg-block">Montgomery Blair High School's Online Student Newspaper</h6>
     </header>
-    <nav class="navbar navbar-expand-xl">
-        <a class="navbar-brand" href="{% url "home:index" %}">SilverChips</a>
+    <nav class="navbar navbar-expand-lg">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars" style="color:white"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item {% if request.get_full_path == "/" %} active {% endif %}">
+                  <a class="nav-link mx-1" href="{% url "home:index"%}">Home</a>
+                </li>
                 {% for section in section_roots %}
                   <li class="nav-item {% if navbar == section.name %} active {% endif %}">
-                    <a class="nav-link" href="{% url "home:view_section" section.name %}">{{ section.title }}</a>
+                    <a class="nav-link mx-1" href="{% url "home:view_section" section.name %}">{{ section.title }}</a>
                   </li>
                 {% endfor %}
             </ul>
