--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Playfair+Display');
 
 /* COLOR SCHEME */
-$undertone: #C0B283; //PALE GOLD
+$undertone: #96962e; //PALE GOLD
 $undertone-secondary: #DCD0C0; //SILK
-$background: #f4f4f4; //PAPER
+$background: #ffffff; //PAPER
 $base: #373737; //CHARCOAL
 $blair: #a52714;
 
