--- a/home/templates/home/includes/_site-navbar-wrapper.html
+++ b/home/templates/home/includes/_site-navbar-wrapper.html
@@ -1,11 +1,14 @@
 <div class="navbar-wrapper sticky-top">
     <header class="navbar-wrapper-header w-100">
-        <div class="logo mx-auto py-3">
+        <a class="logo mx-auto py-3 d-none d-lg-block" href="#">
             {% include "home/includes/_logo-svg.html" %}
-        </div>
+        </a>
         <h6 class="lead text-center d-none d-lg-block">Montgomery Blair High School's Online Student Newspaper</h6>
     </header>
     <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand logo mx-auto py-3 d-lg-none" href="#">
+            {% include "home/includes/_logo-svg.html" %}
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars" style="color:white"></i>
         </button>
