make author text color and change font-weight to bold

--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Playfair+Display');
 
 /* COLOR SCHEME */
-$undertone: #96962e; //PALE GOLD
+$undertone: #916e27; //SIENNA
 $undertone-secondary: #DCD0C0; //SILK
-$background: #ffffff; //PAPER
+$background: #ffffff; //WHITE
 $base: #373737; //CHARCOAL
 $blair: #a52714;
 
