--- a/home/static/home/styles/home.scss
+++ b/home/static/home/styles/home.scss
@@ -33,6 +33,7 @@ html {
     a {
         text-decoration: none;
         color: $undertone;
+        font-weight: bold;
     }
 }
 /* Custom card styles */
