move navbar.html and footer.html to home/shared

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -13,10 +13,10 @@
     </head>
 
     <body>
-        {% include "home/includes/_site-navbar-wrapper.html" %}
+        {% include "shared/navbar.html" %}
         {% block content %}
         {% endblock %}
 
-        {% include "home/includes/_site-footer-wrapper.html" %}
+        {% include "shared/footer.html" %}
     </body>
 </html>
