--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container index-featured">
         <hr class="my-4">
-        <h1 class="display-2 text-center">Home</h1>
+        <h1 class="display-4 text-center">The Latest</h1>
         <hr class="my-4">
         <div class="row mb-4">
             {% for section in section_roots %}
