--- a/home/templates/shared/navbar.html
+++ b/home/templates/shared/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar-wrapper sticky-top">
+<div class="navbar-wrapper fixed-top not-scrolled">
     <header class="navbar-wrapper-header w-100">
         <a class="logo mx-auto py-3 d-none d-lg-block" href="#">
             {% include "home/includes/_logo-svg.html" %}
