change scss variables
add all colors to _custom-settings.scss

--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -6,7 +6,8 @@ $undertone: #916e27; //SIENNA
 $undertone-secondary: #DCD0C0; //SILK
 $background: #ffffff; //WHITE
 $base: #373737; //CHARCOAL
-$blair: #a52714;
+$navbar: #a52714;
+$author: #373737;
 
 /* MASTHEAD/FOOTER BACKGROUND IMAGE */
 $background-image: url("../images/footer_lodyas.png");
