--- a/home/static/home/styles/home.scss
+++ b/home/static/home/styles/home.scss
@@ -32,11 +32,17 @@ html {
     line-height: 1.5rem;
     a {
         text-decoration: none;
-        color: $undertone;
+        color: $author;
         font-weight: bold;
     }
 }
 /* Home Featurette */
+.section-featurette {
+    .section-header a {
+        color: $undertone;
+        text-decoration: none;
+    }
+}
 .section-separator {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
