--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -1,12 +1,17 @@
 /* FONTS */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Playfair+Display');
 
-/* COLOR SCHEME */
-$undertone: #916e27; //SIENNA
-$undertone-secondary: #DCD0C0; //SILK
+/* COLORS */
 $background: #ffffff; //WHITE
-$base: #373737; //CHARCOAL
+$font: #373737; //CHARCOAL
+
 $navbar: #a52714;
+$navbar-header-background:#ffffff;
+$navbar-active: #ffffff;
+$navbar-unactive: #DCD0C0;
+
+$section-header: #373737;
+$story-title: #373737;
 $author: #373737;
 
 /* MASTHEAD/FOOTER BACKGROUND IMAGE */
