--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,16 +4,14 @@
 
 {% block content %}
     <div class="container index-featured">
-        <hr class="my-4">
-        <h1 class="display-4 text-center">The Latest</h1>
-        <hr class="my-4">
-        <div class="row mb-4">
             {% load static %} <!-- FOR TESTING -->
+            <hr class="my-4">
             {% for section in section_roots %}
                 <div class="container section-featurette">
-                    <h1 class="section-header mb-4 text-center">
+                    <h1 class="section-header display-4 text-center">
                         <a href="{% url "home:view_section" section.name %}">{{section.title}}</a>
                     </h1>
+                    <hr class="my-4">
                     {% for story in section.all_stories.all|slice:"5" %}
                         <div class="row mb-3">
                             <div class="col-md-4">
@@ -31,7 +29,6 @@
                     {% endfor %}
                 </div>
             {% endfor %}
-        </div>
     </div>
 {% endblock %}
 {# {% block content %} #}
