transform navbar links to uppercase, change navbar header color

--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -6,7 +6,7 @@ $background: #ffffff; //WHITE
 $font: #373737; //CHARCOAL
 
 $navbar: #a52714;
-$navbar-header-background:#ffffff;
+$navbar-header-background:#f4f4f4;
 $navbar-active: #ffffff;
 $navbar-unactive: #DCD0C0;
 
