--- a/home/templates/home/story.html
+++ b/home/templates/home/story.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="container">
     {% include "home/content.html" with content=story %}
+</div>
 {% endblock %}
